fixed coggraph spacing

--- a/custom.css
+++ b/custom.css
@@ -274,6 +274,8 @@ transform: translateX(-50%); */
   font-weight: 400;
 }
 
+
+
 .speaker-img {
   border: 2px solid gray;
   width: 100px;
@@ -290,11 +292,42 @@ transform: translateX(-50%); */
   background: linear-gradient(90deg, rgba(255,105,0,1) 0%, rgba(252,185,0,1) 35%, rgba(6,147,227,1) 100%);
 }
 
-.center {
+.signup-form {
   display: flex;
   height: 300px;
   justify-content: center;
   align-items: center;
+}
+
+.center {
+  display: flex;
+  flex-wrap: wrap;
+  height: 300px;
+  justify-content: center;
+  align-items: center;
+  width: 400px
+  /* margin-top: 400px; */
+}
+
+.organizer {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  float: left; 
+  margin: auto;
+  /* margin: 10px; */
+  width: 180px;
+  /* padding-bottom: 10px; */
+  height: 220px;
+}
+
+.center-logo {
+  display: flex;
+  height: 300px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
 }
 
 /* for main picture on home page */
